--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -20,10 +20,11 @@
 
             </div>
                 <div class="col-md-9">
-                    <div class="card-body mt-5">
+                    <div class="card-body mb-0 pb-0">
                         <div>
+                            
                             <h1 class="brand-name">LAUNCH COMMAND</h1><br>
-                            <h5>Discover upcoming rocket launches and space agency news</h5><br>
+                            <h5 class="brand-text">Discover upcoming rocket launches and space agency news</h5><br>
                         </div><br>
                     </div>
                 </div>
@@ -61,7 +62,7 @@
 
 <!-- --------- LOGIN MODAL ------------->
 
-<div class="container" id="home-modal-container">
+<div class="container mb-5" id="home-modal-container">
     <!-- Trigger the modal with a button -->
     <button type="button" class="btn btn-default btn-lg" id="btn-signin">Sign in</button>
   
@@ -85,7 +86,7 @@
               </div>
               <div class="form-group">
                 <label for="psw"></span> Password</label>
-                <input type="text" name="password" class="form-control" id="psw" placeholder="Enter password">
+                <input type="password" name="password" class="form-control" id="psw" placeholder="Enter password">
               </div>
 
                 <button type="submit" id="home-modal-login"class="btn  btn-block">Login</button>
@@ -95,7 +96,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"></span> Cancel</button>
+            <button id="btn-cancel" type="submit" class="btn pull-left" data-dismiss="modal"></span> Cancel</button>
             
 
           </div>
@@ -158,7 +159,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"></span> Cancel</button>
+            <button id="btn-cancel" type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"></span> Cancel</button>
 
           </div>
         </div>
