update rocket logo with white logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     {%block nav%}
     <!-- Navigation Bar -->
     <nav id="nav" class="navbar navbar-expand-md navbar-dark sticky-top">
-        <img id="brand-image" alt="brand" src="/static/img/rocket.png">
+        <img id="brand-image" alt="brand" src="/static/img/rocketlogo50.png">
         <div class="container-fluid">
            
             <a class="navbar-brand" href="/upcoming">Launch Command</a>
@@ -95,7 +95,7 @@
     <!-- EndFlash messages -->
 
   <body>
-    <div id="wrapper">
+
 
 
     {% block body %}
@@ -115,7 +115,7 @@
         </div>
       </div> -->
 
-
+<!-- 
       <footer class="page-footer font-small black">
 
         <div class="footer-copyright text-center py-3 sticky-bottom">© 2020 Copyright:
@@ -123,10 +123,10 @@
         </div>
       
     
-      </footer> -->
+      </footer> --> 
     {% endblock %}
 
-</div>
+
   </body>
 </html>
 
