--- a/static/style.css
+++ b/static/style.css
@@ -20,17 +20,26 @@ body {
     background-attachment: fixed;
     background-position: center; 
     background-size: cover;
+    background-color: black;
 
 }
 
 
 h1, h2, h3, h4, h5, h6, p {
     color:#ececec;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Roboto,'Open Sans', sans-serif;
+}
+
+.card-title {
+    font-size: 26px;
+}
+
+.title-color {
+    color:#fd8c04;
 }
 
 .brand-name {
-    font-family: JetBrains Mono, Roboto, sans-serif;
+    font-family: JetBrains Mono, Roboto,'Open Sans', sans-serif;
     font-size: 50px;
 }
 .footer-container {
@@ -42,6 +51,7 @@ h1, h2, h3, h4, h5, h6, p {
     border: 1px solid #00939b;
     border-radius: 10px;
     border: 1px solid #ffffff;
+    font-family: Roboto,'Open Sans', sans-serif;
 }
 
 .btn-primary:hover {
@@ -57,6 +67,7 @@ h1, h2, h3, h4, h5, h6, p {
     align-items: center;
     display: flex;
     text-align: center;
+
 }
 
 
@@ -87,6 +98,7 @@ h1, h2, h3, h4, h5, h6, p {
     margin-left: 50px;
     background-color: #00939b;
     color: white;
+    font-family: Roboto,'Open Sans', sans-serif;
 }
 
 #btn-sign-up:hover {
@@ -100,6 +112,7 @@ h1, h2, h3, h4, h5, h6, p {
 border-color: #00939b;
 font-weight: 400;
 color: #00939b;
+font-family: Roboto,'Open Sans', sans-serif;
 }
 
 #btn-signin:hover {
@@ -142,7 +155,7 @@ color: #00939b;
 }
 
 .countdown-text {
-    word-spacing: 35px;
+    word-spacing: 47px;
 }
 
 #main-home-container {
@@ -174,8 +187,16 @@ color: #00939b;
 
 /* <----UPCOMING LAUNCHES----> */
 
+
+#notify-text {
+    font-family: Roboto,'Open Sans', sans-serif;
+    text-align: center;
+    color: black;
+
+}
 #notify-button {
     max-width: 300px;
+    font-family: Roboto,'Open Sans', sans-serif;
     background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(90,92,106,1) 0%, rgba(32,45,58,1) 81.3% );
     color:white;
 }
@@ -222,39 +243,53 @@ color: #00939b;
 
 .btn-secondary {
     background-color: #ff5733;
+    font-family: Roboto,'Open Sans', sans-serif;
 }
 
+#btn-cancel {
+    background-color:#f9f9f9;
+    border-color: #00939b;
+    font-weight: 400;
+    color: #00939b;
+    font-family: Roboto,'Open Sans', sans-serif;
+    }
 
+#btn-cancel:hover {
+    color: #f9f9f9;
+    font-weight: 400;
+    border-color: #f9f9f9;
+    background-image: radial-gradient( circle 1086px at 1.1% 96.2%,  rgba(1,44,66,1) 0%, rgba(163,221,253,1) 53.6% );
+    }
 
 
 
 /* --------------------------------ISSUE */
-#wrapper {
+/* #wrapper {
     /* height: 100%;
     padding-bottom: 100px; */
-}
+} */
 
 /* FOOTER */
 
 /* --------------------------------ISSUE */
-footer {
+/* footer {
     height:100px;
     /* min-width: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
     text-align: center; */
-    background-color: #000000;
+    /* background-color: #000000; */
     /* position:absolute;
     bottom:0; */
+/* 
+}  */ 
 
-} 
-
-
+/* 
 .container div > p span {
     color: #00939b;
 
-}
+} */
 
 
 
