add card border and make top margin smaller

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
 
 <div id=main-home-container>
     <div id="upcoming-container" class="container-sm text-center">
-        <div id="home-title-card" class="card w-80 mt-5 mb-5 mx-auto border border-light" style="max-width: 900px;">
+        <div id="home-title-card" class="card w-80 mt-3 mb-5 mx-auto border border-light" style="max-width: 900px;">
             <div class="row no-gutters">
 
             </div>
@@ -36,7 +36,7 @@
     <!-- NEXT LAUNCH AND COUNTDOWN -->
 
     <div id="upcoming-container" class="container-sm text-center">
-        <div id="home-countdown-card" class="card w-60 mb-5 mx-auto" style="max-width: 700px;">
+        <div id="home-countdown-card" class="card w-60 mb-5 mx-auto border border-light" style="max-width: 700px;">
             <div class="row no-gutters">
 
             </div>
@@ -144,12 +144,12 @@
 
               <div class="form-group">
                 <label for="psw"></span> Password</label>
-                <input type="text" name="password" class="form-control" id="psw" placeholder="Enter a password">
+                <input type="password" name="password" class="form-control" id="psw" placeholder="Enter a password">
               </div>
 
               <div class="form-group">
                 <label for="psw"></span> Confirm password</label>
-                <input type="text" name="confirm" class="form-control" id="psw" placeholder="Re-enter password">
+                <input type="password" name="confirm" class="form-control" id="psw" placeholder="Re-enter password">
               </div>
 
                 <button type="submit" id="home-modal-register" class="btn btn-block">Submit</button>
