--- a/templates/base.html
+++ b/templates/base.html
@@ -11,17 +11,14 @@
         {% block title %}{% endblock %}
     </title>
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS, jQuery and Bootstrap Bundle (includes Popper) -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="{{url_for('static', filename='app.js')}}"></script>
+
+
+
     <!-- Load style CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> 
@@ -39,35 +36,38 @@
 
     {%block nav%}
     <!-- Navigation Bar -->
-    <nav id="nav" class="navbar navbar-expand-md navbar-dark sticky-top">
+    <nav id="nav" class="navbar navbar-expand-xl navbar-dark sticky-top">
         <img id="brand-image" alt="brand" src="/static/img/rocketlogo50.png">
         <div class="container-fluid">
            
             <a class="navbar-brand" href="/upcoming">Launch Command</a>
            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"></button>
-            
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">ABOUT</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/upcoming">UPCOMING LAUNCHES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/my_launches">LAUNCH LIBRARY</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/all_news">LATEST NEWS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/my_news">NEWS LIBRARY</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">LOGOUT</a>
-                </li>
- 
-            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#colNav">
+            <span class="navbar-toggler-icon"></span>   
+            </button>
+            <div class="collapse navbar-collapse" id="colNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/upcoming">UPCOMING LAUNCHES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/my_launches">LAUNCH LIBRARY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/all_news">LATEST NEWS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/my_news">NEWS LIBRARY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">LOGOUT</a>
+                    </li>
+    
+                </ul>
+            </div>
         </div>
     </nav>
       
